fixed board on smaller sizes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,19 +18,36 @@
     background: #555;
 }
 
-.board {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid black;
-    height: 513px;
-    width: 631px;
-    margin: 0px 0px 20px 0px;
+ .board {
+   display: flex;
+        flex-direction: column;
+        align-items: center;
+       /*  height: 513px; */
+        width: 631px;
+        margin: 0px 0px 20px 0px;
 }
+/*
+@media (min-width: 680px) {
+    .board {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid black;
+        height: 513px;
+        width: 631px;
+        margin: 0px 0px 20px 0px;
+    }
+}
+@media (min-width: 330px) {
+    .board {
+        width: 80%;
+        height: 30vh;
+    }
+} */
 
 .board-row {
     display: flex;
-    height: 30px;
+    /* height: 30px; */
 }
 
 .board-cell {
